--- a/src/app/vehicle/vehicle-search/vehicle-search.component.html
+++ b/src/app/vehicle/vehicle-search/vehicle-search.component.html
@@ -73,7 +73,7 @@
   </form>
 </div>
 
-<div class="search-card">
+<div class="list">
   <app-vehicle-card
     *ngFor="let vehicle of vehiclesToDisplay"
     [vehicle]="vehicle"
