--- a/src/app/vehicle/vehicle-list/vehicle-list.component.css
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.css
@@ -67,11 +67,7 @@ label {
   }
 
   .list {
-    display: flex;
-    flex-wrap: nowrap;
-    padding: 10px;
-    overflow-x: auto !important;
-    white-space: normal;
+    overflow-x: auto;
     display: flex;
     flex-wrap: nowrap;
   }
@@ -105,7 +101,7 @@ label {
 
   .form-liste {
     margin-top: 75px;
-    margin-bottom: 75px;
+    margin-bottom: 25px;
     height: 230px;
     width: 600px;
   }
