--- a/src/app/vehicle/vehicle-details/vehicle-details.component.css
+++ b/src/app/vehicle/vehicle-details/vehicle-details.component.css
@@ -64,13 +64,26 @@ li {
 }
 
 @media screen and (min-width: 768px) {
+  #details_vehicle {
+    width: 930px;
+    max-width: none;
+    position: relative;
+    top: calc(50% - 200px);
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
   img {
-    width: 600px; /* Largeur fixe */
+    width: 600px;
   }
 
   .details-container {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
   }
 
   #car-image-container {
