--- a/src/app/reservation/reservation/reservation.component.css
+++ b/src/app/reservation/reservation/reservation.component.css
@@ -1,9 +1,11 @@
 #resaForm {
-  background-color: rgba(34,97,117, 0.8);
+  background-color: rgba(34, 97, 117, 0.8);
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: calc(50% - 90px) auto 0;
+  margin: auto;
+  position: relative;
+  top: calc(50% - 90px);
   padding: 30px 0 10px;
   width: 350px;
   height: 280px;
@@ -25,4 +27,16 @@ input {
   width: 190px;
   padding: 0 5px;
   margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  #resaForm {
+    background-color: rgba(34, 97, 117, 1);
+    margin: auto;
+    top: calc(50% - 160px);
+    border-radius: 10px;
+    background-color: #226175;
+    color: whitesmoke;
+    box-shadow: 0 2px 3px #ccc;
+  }
 }
