--- a/src/app/vehicle/vehicle-details/vehicle-details.component.css
+++ b/src/app/vehicle/vehicle-details/vehicle-details.component.css
@@ -23,7 +23,7 @@ body {
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 1em;
   margin-left: 20px;
   line-height: 3em;
   font-family: "poppins", sans-serif;
@@ -39,8 +39,8 @@ h2 {
 
   
   img {
-    width: 600px; /* Largeur fixe */
-    height: 400px;
+    width: 300px; /* Largeur fixe */
+    height: 200px;
     
     display: flex;
     align-items: center;
@@ -53,6 +53,7 @@ li {
   list-style: none;
   font-size: 1.2em;
   font-family: poppins;
+  align-items: center;
 }
 
 .charasteristics {
@@ -107,6 +108,9 @@ li {
   display: flex;
   flex-direction: row; 
 }
+h2{
+  font-size: 3em;
+}
 
 ul {
   display: flex;
@@ -119,6 +123,14 @@ ul {
 }
 
 
+img {
+  width: 600px; /* Largeur fixe */
+  height: 400px;
+  
+  display: flex;
+  align-items: center;
+
+}
 
 
 
