--- a/src/app/reservation/reservation-card/reservation-card.component.css
+++ b/src/app/reservation/reservation-card/reservation-card.component.css
@@ -28,7 +28,7 @@
         display: flex;
         flex-direction: wrap;
         justify-content: space-between;
-        width: 60vw;
+        width: 620px;
         height: 100%;
         margin: 12px auto;
         padding: 2px;
