--- a/src/app/reservation/reservation-list/reservation-list.component.css
+++ b/src/app/reservation/reservation-list/reservation-list.component.css
@@ -12,3 +12,21 @@ div {
     width: 360px;
     margin: auto;
 }
+
+@media screen and (min-width: 768px){
+    h2 {
+        margin: 0 0 0 1rem;
+        text-decoration: underline;
+    }
+
+    #view {
+        margin: 1rem auto;
+        padding: 1rem 0;
+        width: 80vw;
+        background-color: white;
+    }
+
+    #resa-number {
+        font-size: larger;
+    }
+}
