Finalized css true to figma

--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -1,4 +1,4 @@
-<div [@fadeInOut]="true" class="dialog-container">
+<div class="dialog-container">
   <div class="dialog-content">
     <h1>{{ data.message }}</h1>
     <button class="yes-button" (click)="yesClick()">Oui</button>
