--- a/src/app/delete-success-dialog/delete-success-dialog.component.html
+++ b/src/app/delete-success-dialog/delete-success-dialog.component.html
@@ -1,4 +1,4 @@
-<div [@fadeInOut]="true" class="dialog-container">
+<div class="dialog-container">
   <div class="dialog-content">
     <p>{{ data.message }}</p>
     <button (click)="onCloseClick()">Fermer</button>
