Fixed footer position

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
-<div id="router-footer">
+<div id="page">
+  <app-header></app-header>
   <div id="page-content">
     <router-outlet></router-outlet>
   </div>
-  <app-footer></app-footer>
+  <app-footer id="footer"></app-footer>
 </div>
