files error vehicule

--- a/src/app/reservation/reservation/reservation.component.html
+++ b/src/app/reservation/reservation/reservation.component.html
@@ -24,12 +24,12 @@
     required
   />
 
-  <label form="reason">Motif de la réservation: </label>
+  <label for="reason">Motif de la réservation: </label>
   <input
     type="text"
     id="reason"
     name="reason"
-    [(ngModel)]="reasonReservation"
+    ngModel="reasonReservation"
     required
   />
 
