--- a/src/app/reservation/reservation-card/reservation-card.component.html
+++ b/src/app/reservation/reservation-card/reservation-card.component.html
@@ -1,30 +1,31 @@
-<div
-  id="cardBox"
-  [ngClass]="resaStyleClass"
-  [routerLink]="['/reservations/', reservation.id]"
->
+<div id="cardBox" [ngClass]="resaStyleClass" [routerLink]="['/reservations/', reservation.id]">
+    
   <div id="resaCardHeader">
-    <span id="resa-number">Réservation n°{{ reservation.id }}{{ reservationPlaceCode }}</span
-    ><span
-      >Statut : {{ resaStatus }} le
-      <span *ngIf="resaStatus == 'terminée'; else elseBlock">{{
-        reservation.end_Date | date : "dd/MM/yyyy"
-      }}</span></span
-    >
+    <span id="resa-number">Réservation n°{{ reservation.id }}{{ reservationPlaceCode }}</span>
+    
+    <span>
+      Statut : {{ resaStatus }} le 
+      <span *ngIf="resaStatus == 'terminée'; else elseBlock">
+        {{ reservation.end_Date | date : "dd/MM/yyyy h:mm a" : 'Europe/Paris' }}
+      </span>
+    </span>
   </div>
-  <ng-template #elseBlock>{{
-    reservation.start_Date | date : "dd/MM/yyyy"
-  }}</ng-template>
-  <span
-    >Réservation pour la période du
-    {{ reservation.start_Date | date : "dd/MM/yyyy" }}
-    {{ reservation.start_Date | date : "h:mm" }} au
-    {{ reservation.end_Date | date : "dd/MM/yyyy" }}
-    {{ reservation.end_Date | date : "h:mm" }} à {{ vehiclePlace }}.</span
-  >
-  <span
-    >Détails : Réservation n°{{ reservation.id }}{{ reservationPlaceCode }}
-    {{ resaStatus }} pour un véhicule "{{ vehicleBrand }} {{ vehicleModel }}"
-    pour {{ reservation.reason }}.</span
-  >
+
+  <ng-template #elseBlock>
+    {{ reservation.start_Date | date : "dd/MM/yyyy h:mm a" : 'Europe/Paris' }}
+  </ng-template>
+  
+  <span>
+    Réservation pour la période du 
+    {{ reservation.start_Date | date : "dd/MM/yyyy" : 'Europe/Paris' }} à 
+    {{ reservation.start_Date | date : "h:mm a" : 'Europe/Paris' }} au 
+    {{ reservation.end_Date | date : "dd/MM/yyyy" : 'Europe/Paris' }} à 
+    {{ reservation.end_Date | date : "h:mm a" : 'Europe/Paris' }} à {{ vehiclePlace }}.
+  </span>
+  
+  <span>
+    Détails : Réservation n°{{ reservation.id }}{{ reservationPlaceCode }} {{ resaStatus }} 
+    pour un véhicule "{{ vehicleBrand }} {{ vehicleModel }}" pour {{ reservation.reason }}.
+  </span>
+
 </div>
