--- a/src/app/reservation/reservation/reservation.component.html
+++ b/src/app/reservation/reservation/reservation.component.html
@@ -24,14 +24,16 @@
     required
   />
 
-  <label for="reason">Motif de la réservation: </label>
+  <label form="reason">Motif de la réservation: </label>
   <input
     type="text"
     id="reason"
     name="reason"
-    ngModel="reasonReservation"
+    [(ngModel)]="reasonReservation"
     required
   />
 
   <button type="submit" id="reserveButton">Réserver</button>
 </form>
+
+
