Changed some css and html

--- a/src/app/vehicle/vehicle-search/vehicle-search.component.html
+++ b/src/app/vehicle/vehicle-search/vehicle-search.component.html
@@ -62,7 +62,7 @@
       "
       class="error-message"
     >
-      Les champs date de début et de fin sont obligatoire .
+      Les champs date de début et de fin sont obligatoires.
     </div>
     <div
       *ngIf="formSubmitted && vehiclesToDisplay.length === 0"
