Cleaned up code

--- a/src/app/misc/cgu/cgu.component.html
+++ b/src/app/misc/cgu/cgu.component.html
@@ -1,33 +1,72 @@
-<div class="cgu"><h1>Conditions d'Utilisation du Service de Réservation de Véhicules</h1>
-  
-<h2>1. Acceptation des Conditions</h2>
-<p>En utilisant notre site web et notre service de réservation de véhicules, vous acceptez pleinement et sans réserve les présentes conditions d'utilisation. Si vous n'acceptez pas ces conditions, veuillez ne pas utiliser notre service.</p>
+<div class="cgu">
+  <h1>Conditions d'Utilisation du Service de Réservation de Véhicules</h1>
 
-<h2>2. Réservation de Véhicules</h2>
-<p>2.1. Vous devez être majeur et avoir la capacité légale de conclure des contrats pour utiliser notre service de réservation de véhicules.</p>
-<p>2.2. Les informations fournies lors de la réservation doivent être exactes, complètes et à jour. Vous êtes responsable de maintenir la précision de vos informations de réservation.</p>
+  <h2>1. Acceptation des Conditions</h2>
+  <p>
+    En utilisant notre site web et notre service de réservation de véhicules,
+    vous acceptez pleinement et sans réserve les présentes conditions
+    d'utilisation. Si vous n'acceptez pas ces conditions, veuillez ne pas
+    utiliser notre service.
+  </p>
 
-<h2>3. Annulations et Modifications</h2>
+  <h2>2. Réservation de Véhicules</h2>
+  <p>
+    2.1. Vous devez être majeur et avoir la capacité légale de conclure des
+    contrats pour utiliser notre service de réservation de véhicules.
+  </p>
+  <p>
+    2.2. Les informations fournies lors de la réservation doivent être exactes,
+    complètes et à jour. Vous êtes responsable de maintenir la précision de vos
+    informations de réservation.
+  </p>
 
-<p>3.1. Les politiques d'annulation et de modification peuvent varier en fonction du type de véhicule et de la période de réservation. Veuillez vous référer aux détails spécifiques lors de la réservation.</p>
+  <h2>3. Annulations et Modifications</h2>
 
-<h2>4. Utilisation Responsable des Véhicules</h2>
+  <p>
+    3.1. Les politiques d'annulation et de modification peuvent varier en
+    fonction du type de véhicule et de la période de réservation. Veuillez vous
+    référer aux détails spécifiques lors de la réservation.
+  </p>
 
-<p>4.1. Vous devez utiliser les véhicules de manière responsable et conformément aux lois et réglementations en vigueur.</p>
+  <h2>4. Utilisation Responsable des Véhicules</h2>
 
-<p>4.2. Vous êtes responsable de tout dommage causé au véhicule pendant la période de location.</p>
+  <p>
+    4.1. Vous devez utiliser les véhicules de manière responsable et
+    conformément aux lois et réglementations en vigueur.
+  </p>
 
-<h2>5. Responsabilité</h2>
+  <p>
+    4.2. Vous êtes responsable de tout dommage causé au véhicule pendant la
+    période de location.
+  </p>
 
-<p>5.1. Nous ne sommes pas responsables des dommages directs, indirects, spéciaux, consécutifs ou immatériels résultant de l'utilisation de notre service de réservation de véhicules.</p>
+  <h2>5. Responsabilité</h2>
 
-<h2>6. Confidentialité</h2>
+  <p>
+    5.1. Nous ne sommes pas responsables des dommages directs, indirects,
+    spéciaux, consécutifs ou immatériels résultant de l'utilisation de notre
+    service de réservation de véhicules.
+  </p>
 
-<p>6.1. Les informations fournies lors de la réservation seront traitées conformément à notre politique de confidentialité.</p>
+  <h2>6. Confidentialité</h2>
 
-<h2>7. Modification des Conditions</h2>
+  <p>
+    6.1. Les informations fournies lors de la réservation seront traitées
+    conformément à notre politique de confidentialité.
+  </p>
 
-<p>8.1. Nous nous réservons le droit de modifier ces conditions d'utilisation à tout moment. Les modifications seront effectives dès leur publication sur notre site web.</p>
-<h2>8. Loi Applicable</h2>
-<p>8.1. Les présentes conditions d'utilisation sont régies par les lois en vigueur dans [votre pays ou région]. Tout litige découlant de l'utilisation de notre service sera soumis à la juridiction compétente dans [votre ville ou région].</p>
+  <h2>7. Modification des Conditions</h2>
+
+  <p>
+    8.1. Nous nous réservons le droit de modifier ces conditions d'utilisation à
+    tout moment. Les modifications seront effectives dès leur publication sur
+    notre site web.
+  </p>
+  <h2>8. Loi Applicable</h2>
+  <p>
+    8.1. Les présentes conditions d'utilisation sont régies par les lois en
+    vigueur dans [votre pays ou région]. Tout litige découlant de l'utilisation
+    de notre service sera soumis à la juridiction compétente dans [votre ville
+    ou région].
+  </p>
 </div>
