--- a/src/app/misc/cookies/cookies.component.html
+++ b/src/app/misc/cookies/cookies.component.html
@@ -1,29 +1,66 @@
 <div class="cookies">
-    
-    <h1>Politique d'Utilisation des Cookies</h1>
-  
-<h2>1. Introduction</h2>
-<p>Cette politique d'utilisation des cookies explique comment nous utilisons les cookies et autres technologies similaires pour améliorer votre expérience sur notre site web. En utilisant notre site, vous acceptez l'utilisation de cookies conformément à cette politique.</p>
+  <h1>Politique d'Utilisation des Cookies</h1>
 
-<h2>2. Qu'est-ce qu'un Cookie ?</h2>
-<p>Un cookie est un petit fichier texte placé sur votre appareil lorsque vous visitez un site web. Il permet au site de se souvenir de vos actions et préférences (telles que la connexion, la langue, la taille de la police et d'autres préférences d'affichage) sur une période donnée. Cela vous évite de devoir les saisir à chaque fois que vous revenez sur le site ou que vous naviguez d'une page à l'autre.</p>
+  <h2>1. Introduction</h2>
+  <p>
+    Cette politique d'utilisation des cookies explique comment nous utilisons
+    les cookies et autres technologies similaires pour améliorer votre
+    expérience sur notre site web. En utilisant notre site, vous acceptez
+    l'utilisation de cookies conformément à cette politique.
+  </p>
 
-<h2>3. Comment Nous Utilisons les Cookies</h2>
-<h3>3.1. Cookies Nécessaires</h3>
-<p>Ces cookies sont essentiels pour vous permettre de naviguer sur notre site web et d'utiliser ses fonctionnalités. Sans ces cookies, certaines parties du site ne fonctionneront pas correctement.</p>
+  <h2>2. Qu'est-ce qu'un Cookie ?</h2>
+  <p>
+    Un cookie est un petit fichier texte placé sur votre appareil lorsque vous
+    visitez un site web. Il permet au site de se souvenir de vos actions et
+    préférences (telles que la connexion, la langue, la taille de la police et
+    d'autres préférences d'affichage) sur une période donnée. Cela vous évite de
+    devoir les saisir à chaque fois que vous revenez sur le site ou que vous
+    naviguez d'une page à l'autre.
+  </p>
 
-<h3>3.2. Cookies de Performance</h3>
-<p>Nous utilisons ces cookies pour recueillir des informations sur la manière dont les visiteurs utilisent notre site. Ces informations nous aident à améliorer le fonctionnement du site et à comprendre quelles pages sont les plus visitées, les zones qui nécessitent des améliorations, etc.</p>
+  <h2>3. Comment Nous Utilisons les Cookies</h2>
+  <h3>3.1. Cookies Nécessaires</h3>
+  <p>
+    Ces cookies sont essentiels pour vous permettre de naviguer sur notre site
+    web et d'utiliser ses fonctionnalités. Sans ces cookies, certaines parties
+    du site ne fonctionneront pas correctement.
+  </p>
 
-<h3>3.3. Cookies de Fonctionnalité</h3>
-<p>Ces cookies permettent au site de se souvenir des choix que vous faites (comme votre nom d'utilisateur, votre langue ou la région où vous vous trouvez) et de fournir des fonctionnalités améliorées et plus personnelles.</p>
+  <h3>3.2. Cookies de Performance</h3>
+  <p>
+    Nous utilisons ces cookies pour recueillir des informations sur la manière
+    dont les visiteurs utilisent notre site. Ces informations nous aident à
+    améliorer le fonctionnement du site et à comprendre quelles pages sont les
+    plus visitées, les zones qui nécessitent des améliorations, etc.
+  </p>
 
-<h2>4. Contrôle des Cookies</h2>
-<p>Vous avez le droit de choisir d'accepter ou de refuser les cookies. La plupart des navigateurs acceptent automatiquement les cookies, mais vous pouvez généralement modifier les paramètres de votre navigateur pour refuser les cookies si vous le souhaitez.</p>
+  <h3>3.3. Cookies de Fonctionnalité</h3>
+  <p>
+    Ces cookies permettent au site de se souvenir des choix que vous faites
+    (comme votre nom d'utilisateur, votre langue ou la région où vous vous
+    trouvez) et de fournir des fonctionnalités améliorées et plus personnelles.
+  </p>
 
-<h2>5. Modification de la Politique</h2>
-<p>Nous nous réservons le droit de modifier cette politique d'utilisation des cookies à tout moment. Les modifications entreront en vigueur dès leur publication sur notre site web.</p>
+  <h2>4. Contrôle des Cookies</h2>
+  <p>
+    Vous avez le droit de choisir d'accepter ou de refuser les cookies. La
+    plupart des navigateurs acceptent automatiquement les cookies, mais vous
+    pouvez généralement modifier les paramètres de votre navigateur pour refuser
+    les cookies si vous le souhaitez.
+  </p>
 
-<h2>6. Contact</h2>
-<p>Si vous avez des questions concernant notre utilisation des cookies, veuillez nous contacter à <a href="mailto:contact@example.com">contact@example.com</a>.</p>
+  <h2>5. Modification de la Politique</h2>
+  <p>
+    Nous nous réservons le droit de modifier cette politique d'utilisation des
+    cookies à tout moment. Les modifications entreront en vigueur dès leur
+    publication sur notre site web.
+  </p>
+
+  <h2>6. Contact</h2>
+  <p>
+    Si vous avez des questions concernant notre utilisation des cookies,
+    veuillez nous contacter à
+    <a href="mailto:contact@example.com">contact@example.com</a>.
+  </p>
 </div>
