--- a/src/app/misc/not-found/not-found.component.html
+++ b/src/app/misc/not-found/not-found.component.html
@@ -1,7 +1,10 @@
 <div class="not-found">
-    <h1>404</h1>
-    <div class="text">
+  <h1>404</h1>
+  <div class="text">
     <h2>Page introuvable</h2>
-    <p>Il semblerait que la page que vous tentiez de rejoindre n'existe pas ! <a routerLink="/vehicles">Cliquez ici</a> pour revenir à l'accueil.</p>
-</div>
+    <p>
+      Il semblerait que la page que vous tentiez de rejoindre n'existe pas !
+      <a routerLink="/vehicles">Cliquez ici</a> pour revenir à l'accueil.
+    </p>
+  </div>
 </div>
