--- a/src/app/vehicle/vehicle-details/vehicle-details.component.html
+++ b/src/app/vehicle/vehicle-details/vehicle-details.component.html
@@ -13,9 +13,11 @@
         <li class="charasteristics">
           <i
             class="fas fa-gas-pump"
-            *ngIf="vehicleDetails.model.energy === 'essence' || vehicleDetails.model.energy === 'diesel'; else electricIcon"
-
-            
+            *ngIf="
+              vehicleDetails.model.energy === 'essence' ||
+                vehicleDetails.model.energy === 'diesel';
+              else electricIcon
+            "
           ></i>
           <ng-template #electricIcon
             ><i class="fa-solid fa-charging-station"></i
