--- a/src/app/misc/footer/footer.component.html
+++ b/src/app/misc/footer/footer.component.html
@@ -1,23 +1,23 @@
 <footer>
   <div class="footer-links">
-   <div class ="footer ul">
-    <ul class="footer-ul-li">
-      <li>
-      <a routerLink='cgu'>Conditions d'utilisation</a>
-      </li>
-      <li>
-      <a routerLink='mentions'>Mentions légales</a>
-      </li>
-      <li>
-      <a routerLink='cookies'>Gestion des cookies</a>
-      </li>
-      <li>
-      <a routerLink='contact'>Contact</a>
-    </li>
-    </ul>
+    <div class="footer ul">
+      <ul class="footer-ul-li">
+        <li>
+          <a routerLink="cgu">Conditions d'utilisation</a>
+        </li>
+        <li>
+          <a routerLink="mentions">Mentions légales</a>
+        </li>
+        <li>
+          <a routerLink="cookies">Gestion des cookies</a>
+        </li>
+        <li>
+          <a routerLink="contact">Contact</a>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="copyright">
-  <p>&copy; 2023 Carfleet. Tous droits réservés.</p>
-</div>
+    <p>&copy; 2023 Carfleet. Tous droits réservés.</p>
+  </div>
 </footer>
